--- a/share/static/css/base-responsive/portlets.css
+++ b/share/static/css/base-responsive/portlets.css
@@ -7,11 +7,7 @@ table.dashboard {
    max-width: 500px;
 }
 
-.quick-create .select-queue {
-   width: 12em;
-}
-
 .quick-create input[type="text"], .quick-create textarea {
     width: 100%;
-
 }
+
